--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@angular/router": "^5.2.0",
     "@angular/service-worker": "^5.2.0",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.5",
+    "postfix-calculator": "0.0.2",
     "rxjs": "^5.5.6",
+    "xlsx": "^0.12.8",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
